[package]
name = "adb_query_runner"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
tera = "1.19"
reqwest = { version = "0.11", features = ["json", "stream"] }
include_dir = "0.7"
anyhow = "1.0"
futures = "0.3"
base64 = "0.21"
